--- a/src/input.css
+++ b/src/input.css
@@ -1,6 +1,33 @@
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; */
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+.animate-fadeIn {
+    animation: fadeIn 0.8s;
+}
+
+@keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  .animate-fadeOut {
+    animation: fadeOut 0.8s;
+  }
